# nellie-hikes

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/nellie_hikes/: __about__.py  __init__.py  scrape.py
src/nellie_hikes/cli/: __init__.py
