[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nellie-hikes"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "John Ensley", email = "johnensley17@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "requests",
  "selenium",
]

[project.urls]
Documentation = "https://github.com/ensley/nellie-hikes#readme"
Issues = "https://github.com/ensley/nellie-hikes/issues"
Source = "https://github.com/ensley/nellie-hikes"

[project.scripts]
nellie-hikes = "nellie_hikes.cli:nellie_hikes"

[tool.hatch.version]
path = "src/nellie_hikes/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nellie_hikes tests}"

[tool.coverage.run]
source_pkgs = ["nellie_hikes", "tests"]
branch = true
parallel = true
omit = [
  "src/nellie_hikes/__about__.py",
]

[tool.coverage.paths]
nellie_hikes = ["src/nellie_hikes", "*/nellie-hikes/src/nellie_hikes"]
tests = ["tests", "*/nellie-hikes/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
